kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fintrack
  namespace: fintrack
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"

spec:
  ingressClassName: nginx

  rules:
  - host: fintrack.local
    http:
      paths:

      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 8000

      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 3000
